# vstgui-drawing-example

./: CMakeLists.txt  appveyor.yml
patch/: 0001-Fix-link-with-wWinMain-MSVC-2019-x86.patch
source/: drawing.cpp  drawingarea.cpp  drawingarea.h
